feat(image): add image component

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -85,3 +85,4 @@
 @forward '../guider/styles/guider-tip.scss';
 @forward '../resizable/styles/resizable.scss';
 @forward '../rate/styles/rate.scss';
+@forward '../image/styles/image.scss';
