--- a/src/cascader/cascader-li.component.html
+++ b/src/cascader/cascader-li.component.html
@@ -1,5 +1,10 @@
 <ng-container>
-    {{ getOptionLabel() }}
+  <span *ngIf="!multiple || !option.isLeaf"> {{ getOptionLabel() }}</span>
+  <label *ngIf="multiple && option.isLeaf" thyCheckbox [(ngModel)]="active" [thyLabelText]="getOptionLabel()"></label>
 </ng-container>
-<span *ngIf="!option.isLeaf || option.children && option.children.length || option.loading" class="wtf wtf-angle-right thy-cascader-menu-item-expand-icon">
+
+<span
+  *ngIf="!option.isLeaf || (option.children && option.children.length) || option.loading"
+  class="wtf wtf-angle-right thy-cascader-menu-item-expand-icon"
+>
 </span>
